--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -43,7 +43,7 @@
   "im_flexible": "Saya fleksibel dengan tanggal",
   "hotel_residence": "Residensi Hotel",
   "seamless_living": "Hidup Tanpa Batas, Jadikan Hotel Tempat Tinggal Tetap Anda!",
-  "saveloka_recommended": "Unit yang Direkomendasikan oleh Saveloka",
+  "nowtravel_recommended": "Unit yang Direkomendasikan oleh nowtravel",
   "stay_monthly": "Tinggal bulanan untuk harga lebih murah 🤑",
   "disc_upto": "Diskon hingga",
   "see_all": "Lihat semua",
@@ -51,8 +51,8 @@
   "find_best": "Temukan unit terbaik untuk staycation 🌴",
   "thematic_instagram": "Unit Tematis dan Instagramable!✨",
   "stay_with": "Tinggal dengan Suasana Baru!",
-  "saveloka_premium": "Saveloka Premium",
-  "selected_premium": "Unit premium terpilih dengan layanan bintang 5 oleh Saveloka",
+  "nowtravel_premium": "NOW Travel Premium",
+  "selected_premium": "Unit premium terpilih dengan layanan bintang 5 oleh nowtravel",
   "find_appartment": "Temukan apartemen yang sesuai dengan anggaran Anda! 💳",
   "price_below": "Harga di bawah adalah harga bulanan",
   "lowest": "Terendah",
@@ -66,7 +66,7 @@
   "best_selling": "Bangunan Apartemen Terlaris 🏆",
   "recommend_apartments": "Apartemen yang Direkomendasikan 🏬",
   "looking_for_a_place": "Mencari tempat tinggal? 🏠",
-  "find_by_saveloka": "Cari unit 'By Saveloka' di kota besar Indonesia",
+  "find_by_nowtravel": "Cari unit 'By nowtravel' di kota besar Indonesia",
   "new": "BARU",
   "discussion": "Diskusi",
   "introduction": "Pengantar",
@@ -218,7 +218,7 @@
   "contact_info": "Informasi Kontak",
   "real_estate_images": "Gambar Properti",
   "update_image_to_maximum": "Perbarui gambar hingga maksimal dua gambar",
-  "do_you_agree": "Apakah Anda setuju dengan syarat dan kebijakan Saveloka?",
+  "do_you_agree": "Apakah Anda setuju dengan syarat dan kebijakan nowtravel?",
   "add_room": "Tambahkan ruangan",
   "room_title": "Judul ruangan",
   "enter_room_type": "Masukkan judul jenis kamar",
@@ -257,7 +257,7 @@
   "main_currency": "Mata Uang Utama",
   "distance_to_city": "Jarak ke Pusat Kota",
   "number_of_floors": "Jumlah Lantai",
-  "property_facilities":"Fasilitas Properti",
+  "property_facilities": "Fasilitas Properti",
   "estate_contact": "Informasi Kontak Properti",
   "rooms": "Kamar",
   "estate_photo": "Foto Properti",
@@ -283,111 +283,111 @@
   "link_tiktok": "Tautan TikTok",
   "name": "Nama",
   "tour_by_topic": "Tur berdasarkan topik",
-"emigrate": "Beremigrasi",
-"world": "Dunia",
-"find_recommend_tour": "Temukan Tur yang Direkomendasikan",
-"package_tour_aboard": "Paket tur di luar negeri",
-"discover_package_family": "Temukan paket tur keluarga 5D4D !!",
-"themed_tour": "Tur Berdasarkan Tema",
-"discover_tour_youlove": "Temukan jenis tur yang Anda suka",
-"travel_around_world": "Wisata keliling dunia",
-"discover_more_tour": "Temukan lebih banyak tur",
-"the_place_discovery": "Tempat-tempat sangat layak untuk ditemukan",
-"dosmestic_destination": "Tujuan dalam negeri",
-"international_destination": "Tujuan internasional",
-"watch_the_most": "Tonton video paling hidup tentang tempat yang ingin Anda kunjungi",
-"lastest_tour": "Tanggal tur terbaru",
-"hour": "Jam",
-"ticket_option": "Pilihan tiket",
-"see_detail": "Lihat detail",
-"easy_refund": "Pengembalian uang mudah",
-"easy_reschedule": "Penjadwalan ulang mudah",
-"select_ticket": "Pilih tiket",
-"trip_highlight": "Sorotan perjalanan",
-"tour_schedule": "Jadwal tur",
-"find_tour": "Temukan tur",
-"best_price_from": "Harga terbaik dari",
-"room_information": "Informasi Kamar",
-"little_convenient": "Sedikit Nyaman",
-"price_detail": "Detail Harga",
-"room_rate": "Tarif Kamar",
-"taxes_and_fees": "Pajak dan Biaya",
-"total": "Total",
-"request_to_book": "Permintaan untuk PESAN",
-"room_detail": "Detail Kamar",
-"book": "PESAN",
-"contact_detail": "Detail Kontak",
-"choose_time": "Pilih Waktu",
-"use_coupon": "Gunakan Kupon",
-"adult": "Dewasa",
-"children": "Anak-anak",
-"add_number_guest": "Tambah jumlah tamu",
-"adult_year_old": "Dewasa (12-60 tahun)",
-"children_year_old": "Anak-anak (4-11 tahun)",
-"things_need_to_know": "Hal yang perlu diketahui",
-"inexperienced": "Belum berpengalaman",
-"inseparable": "Tidak terpisahkan",
-"no_reservation": "Tidak ada reservasi",
-"include_addition": "Termasuk biaya tambahan",
-"price_include": "Harga termasuk",
-"carriage": "Kereta kuda",
-"round_trip": "Shuttle bolak-balik",
-"high_speed": "Kereta cepat",
-"tour_guide": "Pemandu wisata",
-"thai_english": "Pemandu wisata yang berbicara dalam bahasa Thai - Inggris",
-"meal": "Makanan",
-"light_breakfast": "Sarapan ringan",
-"lunch_option": "Pilihan makan siang (tersedia pilihan vegetarian)",
-"service_supple": "Layanan/suplemen",
-"divine_mask": "Topeng selam dan jaket pelampung",
-"admission_fee": "Biaya masuk",
-"insurance_provide": "Asuransi yang disediakan oleh operator",
-"soft_drink": "Minuman ringan",
-"seasonal_fruits": "Buah-buahan musiman",
-"cake_and_snack": "Harga kue dan camilan tidak termasuk",
-"other_personal": "Biaya pribadi lainnya",
-"tip": "Tip",
-"voucher_validity": "Kesesuaian voucher",
-"use_selected_date": "Gunakan pada tanggal yang dipilih",
-"valid_normally": "Berlaku setiap hari biasanya",
-"valid_holiday": "Berlaku setiap hari libur",
-"conversion_method": "Metode konversi",
-"do_not_need_book": "Anda tidak perlu memesan sebelum datang",
-"input_directly": "Input langsung",
-"after_confirming": "Setelah mengonfirmasi reservasi, Anda dapat melihat voucher layanan di halaman reservasi saya atau melalui email",
-"when_coming": "Saat datang, cukup serahkan layanan di telepon untuk staf di pintu masuk",
-"no_need_print_card": "Tidak perlu mencetak kartu pembayaran",
-"just_present_electronic": "Hanya persembahkan tiket/ kartu pembayaran elektronik di telepon Anda saat dikonversi atau memasuki pintu. Mohon atur kecerahan layar yang sesuai.",
-"how_to_change": "Bagaimana cara mengubah pilihan",
-"present_voucher": "Tunjukkan voucher di ponsel Anda atau cetak, bersama dengan paspor/KTP Anda untuk menukarkan hadiah dengan operator tur.",
-"you_must": "Anda harus bersedia untuk mengikuti tur dan tempat pertemuan sudah dijadwalkan. Jika Anda tidak hadir pada waktu dan tempat pertemuan, Anda akan ditinggalkan dan reservasi Anda dianggap tidak valid. Anda dapat meminta jadwal berdasarkan persetujuan dari operator tur dan ruang pada hari yang Anda pilih.",
-"please_note": "Harap perhatikan bahwa hanya kartu pembayaran Traveloka Anda yang valid untuk masuk. Bukti pembayaran atau bukti pembayaran tidak dapat digunakan untuk masuk.",
-"conversion": "Konversi",
-"refund_and_change": "Pengembalian dana dan perubahan kalender",
-"can_change_calendar": "Dapat mengubah kalender di halaman pemesanan saya sebelum tanggal kedatangan yang dipilih.",
-"can_be_fully": "Dapat dikembalikan sepenuhnya",
-"it_is_only": "Hanya memungkinkan untuk meminta proses pengembalian dana sebelum tanggal pemilihan. Lihat kebijakan pengembalian dana di bawah ini untuk informasi lebih lanjut.",
-"calendar_change": "Kebijakan Perubahan Kalender",
-"you_can_only": "Anda hanya dapat mengubah jadwal pemesanan Anda hingga 2 kali.",
-"require_of_schedule": "Persyaratan jadwal dapat dilakukan hingga 1 hari sebelum tanggal kunjungan yang dipilih.",
-"your_rearrangement": "Jadwal pengaturan ulang Anda akan berlaku untuk semua tamu dalam 1 kode pemesanan.",
-"you_can_schedule": "Anda dapat menjadwalkan reservasi Anda ke hari apa pun yang tersedia dalam periode dari tanggal penerbitan voucher hingga setelah 14 hari dari tanggal wisata asli Anda. Harap dicatat bahwa Anda hanya dapat mengubah kalender ke hari lain dengan harga yang sama atau lebih rendah dari reservasi asli Anda.",
-"the_scheduling": "Reservasi penjadwalan tidak akan dikembalikan.",
-"refund_policy": "Kebijakan Pengembalian Dana",
-"requirement_for_refund": "Persyaratan untuk paling lambat 2 hari sebelum pilihan Anda untuk menerima pengembalian dana 100%.",
-"your_reservation": "Reservasi Anda tidak akan dikembalikan jika Anda meminta pengembalian dana kurang dari 2 hari sebelum tanggal yang dipilih.",
-"the_final_refund": "Pengembalian dana terakhir tidak termasuk biaya layanan, kupon, dan/atau biaya transfer bank tunggal.",
-"to_cancel_reservation": "Untuk membatalkan reservasi Anda dan meminta pengembalian dana, silakan kunjungi barang reservasi saya. Di bagian manajemen reservasi, sentuh pengembalian dana dan ikuti proses pengembalian dana (tersedia pada aplikasi Traveloka versi 3.18 atau lebih tinggi atau situs web Traveloka di komputer).",
-"term_condition": "Syarat & Ketentuan",
-"there_is_surcharge": "Ada biaya tambahan sebesar THB 1000 untuk tur yang beroperasi selama periode Tahun Baru dan Songkran. Silakan bayar biaya tambahan langsung kepada operator tur.",
-"all_travelers": "Semua wisatawan harus membawa identifikasi (atau paspor) dengan mereka setiap saat.",
-"child_ticket": "Tiket anak berlaku untuk anak-anak usia 4 hingga 11 tahun atau tinggi kurang dari 120cm.",
-"adult_ticket": "Tiket dewasa berlaku untuk orang dewasa berusia 12 hingga 60 tahun atau lebih dari 120cm.",
-"infants_under": "Bayi di bawah 1 tahun, lansia di atas 60 tahun, dan hewan peliharaan tidak diizinkan dalam tur.",
-"guest_with_high": "Tamunya dengan tekanan darah tinggi, penyakit jantung, kehamilan, asma, dan penyakit tulang atau ortopedi tidak diizinkan untuk berpartisipasi dalam tur ini.",
-"you_are_allergic": "Jika Anda alergi terhadap makanan tertentu, harap beri tahu operator sebelum melakukan perjalanan.",
-"this_activity": "Aktivitas ini tidak cocok untuk anak di bawah 2 tahun, wanita hamil, atau orang dengan kondisi medis atau cacat.",
-"foreigners_must": "Warga asing harus mengajukan E-Visa melalui  dan mengirimkan visa yang disetujui ke agen 7 hari sebelum tanggal perjalanan.",
-"you_plan_to": "Jika Anda berencana melakukan perjalanan selama festival besar, Anda harus memesan tiket setidaknya sebulan sebelumnya.",
-"itineraries_time": "Itinerary dan waktu di atas adalah perkiraan dan dapat diubah tanpa pemberitahuan untuk menyesuaikan dengan pasang surut dan kondisi cuaca setempat."
+  "emigrate": "Beremigrasi",
+  "world": "Dunia",
+  "find_recommend_tour": "Temukan Tur yang Direkomendasikan",
+  "package_tour_aboard": "Paket tur di luar negeri",
+  "discover_package_family": "Temukan paket tur keluarga 5D4D !!",
+  "themed_tour": "Tur Berdasarkan Tema",
+  "discover_tour_youlove": "Temukan jenis tur yang Anda suka",
+  "travel_around_world": "Wisata keliling dunia",
+  "discover_more_tour": "Temukan lebih banyak tur",
+  "the_place_discovery": "Tempat-tempat sangat layak untuk ditemukan",
+  "dosmestic_destination": "Tujuan dalam negeri",
+  "international_destination": "Tujuan internasional",
+  "watch_the_most": "Tonton video paling hidup tentang tempat yang ingin Anda kunjungi",
+  "lastest_tour": "Tanggal tur terbaru",
+  "hour": "Jam",
+  "ticket_option": "Pilihan tiket",
+  "see_detail": "Lihat detail",
+  "easy_refund": "Pengembalian uang mudah",
+  "easy_reschedule": "Penjadwalan ulang mudah",
+  "select_ticket": "Pilih tiket",
+  "trip_highlight": "Sorotan perjalanan",
+  "tour_schedule": "Jadwal tur",
+  "find_tour": "Temukan tur",
+  "best_price_from": "Harga terbaik dari",
+  "room_information": "Informasi Kamar",
+  "little_convenient": "Sedikit Nyaman",
+  "price_detail": "Detail Harga",
+  "room_rate": "Tarif Kamar",
+  "taxes_and_fees": "Pajak dan Biaya",
+  "total": "Total",
+  "request_to_book": "Permintaan untuk PESAN",
+  "room_detail": "Detail Kamar",
+  "book": "PESAN",
+  "contact_detail": "Detail Kontak",
+  "choose_time": "Pilih Waktu",
+  "use_coupon": "Gunakan Kupon",
+  "adult": "Dewasa",
+  "children": "Anak-anak",
+  "add_number_guest": "Tambah jumlah tamu",
+  "adult_year_old": "Dewasa (12-60 tahun)",
+  "children_year_old": "Anak-anak (4-11 tahun)",
+  "things_need_to_know": "Hal yang perlu diketahui",
+  "inexperienced": "Belum berpengalaman",
+  "inseparable": "Tidak terpisahkan",
+  "no_reservation": "Tidak ada reservasi",
+  "include_addition": "Termasuk biaya tambahan",
+  "price_include": "Harga termasuk",
+  "carriage": "Kereta kuda",
+  "round_trip": "Shuttle bolak-balik",
+  "high_speed": "Kereta cepat",
+  "tour_guide": "Pemandu wisata",
+  "thai_english": "Pemandu wisata yang berbicara dalam bahasa Thai - Inggris",
+  "meal": "Makanan",
+  "light_breakfast": "Sarapan ringan",
+  "lunch_option": "Pilihan makan siang (tersedia pilihan vegetarian)",
+  "service_supple": "Layanan/suplemen",
+  "divine_mask": "Topeng selam dan jaket pelampung",
+  "admission_fee": "Biaya masuk",
+  "insurance_provide": "Asuransi yang disediakan oleh operator",
+  "soft_drink": "Minuman ringan",
+  "seasonal_fruits": "Buah-buahan musiman",
+  "cake_and_snack": "Harga kue dan camilan tidak termasuk",
+  "other_personal": "Biaya pribadi lainnya",
+  "tip": "Tip",
+  "voucher_validity": "Kesesuaian voucher",
+  "use_selected_date": "Gunakan pada tanggal yang dipilih",
+  "valid_normally": "Berlaku setiap hari biasanya",
+  "valid_holiday": "Berlaku setiap hari libur",
+  "conversion_method": "Metode konversi",
+  "do_not_need_book": "Anda tidak perlu memesan sebelum datang",
+  "input_directly": "Input langsung",
+  "after_confirming": "Setelah mengonfirmasi reservasi, Anda dapat melihat voucher layanan di halaman reservasi saya atau melalui email",
+  "when_coming": "Saat datang, cukup serahkan layanan di telepon untuk staf di pintu masuk",
+  "no_need_print_card": "Tidak perlu mencetak kartu pembayaran",
+  "just_present_electronic": "Hanya persembahkan tiket/ kartu pembayaran elektronik di telepon Anda saat dikonversi atau memasuki pintu. Mohon atur kecerahan layar yang sesuai.",
+  "how_to_change": "Bagaimana cara mengubah pilihan",
+  "present_voucher": "Tunjukkan voucher di ponsel Anda atau cetak, bersama dengan paspor/KTP Anda untuk menukarkan hadiah dengan operator tur.",
+  "you_must": "Anda harus bersedia untuk mengikuti tur dan tempat pertemuan sudah dijadwalkan. Jika Anda tidak hadir pada waktu dan tempat pertemuan, Anda akan ditinggalkan dan reservasi Anda dianggap tidak valid. Anda dapat meminta jadwal berdasarkan persetujuan dari operator tur dan ruang pada hari yang Anda pilih.",
+  "please_note": "Harap perhatikan bahwa hanya kartu pembayaran Traveloka Anda yang valid untuk masuk. Bukti pembayaran atau bukti pembayaran tidak dapat digunakan untuk masuk.",
+  "conversion": "Konversi",
+  "refund_and_change": "Pengembalian dana dan perubahan kalender",
+  "can_change_calendar": "Dapat mengubah kalender di halaman pemesanan saya sebelum tanggal kedatangan yang dipilih.",
+  "can_be_fully": "Dapat dikembalikan sepenuhnya",
+  "it_is_only": "Hanya memungkinkan untuk meminta proses pengembalian dana sebelum tanggal pemilihan. Lihat kebijakan pengembalian dana di bawah ini untuk informasi lebih lanjut.",
+  "calendar_change": "Kebijakan Perubahan Kalender",
+  "you_can_only": "Anda hanya dapat mengubah jadwal pemesanan Anda hingga 2 kali.",
+  "require_of_schedule": "Persyaratan jadwal dapat dilakukan hingga 1 hari sebelum tanggal kunjungan yang dipilih.",
+  "your_rearrangement": "Jadwal pengaturan ulang Anda akan berlaku untuk semua tamu dalam 1 kode pemesanan.",
+  "you_can_schedule": "Anda dapat menjadwalkan reservasi Anda ke hari apa pun yang tersedia dalam periode dari tanggal penerbitan voucher hingga setelah 14 hari dari tanggal wisata asli Anda. Harap dicatat bahwa Anda hanya dapat mengubah kalender ke hari lain dengan harga yang sama atau lebih rendah dari reservasi asli Anda.",
+  "the_scheduling": "Reservasi penjadwalan tidak akan dikembalikan.",
+  "refund_policy": "Kebijakan Pengembalian Dana",
+  "requirement_for_refund": "Persyaratan untuk paling lambat 2 hari sebelum pilihan Anda untuk menerima pengembalian dana 100%.",
+  "your_reservation": "Reservasi Anda tidak akan dikembalikan jika Anda meminta pengembalian dana kurang dari 2 hari sebelum tanggal yang dipilih.",
+  "the_final_refund": "Pengembalian dana terakhir tidak termasuk biaya layanan, kupon, dan/atau biaya transfer bank tunggal.",
+  "to_cancel_reservation": "Untuk membatalkan reservasi Anda dan meminta pengembalian dana, silakan kunjungi barang reservasi saya. Di bagian manajemen reservasi, sentuh pengembalian dana dan ikuti proses pengembalian dana (tersedia pada aplikasi Traveloka versi 3.18 atau lebih tinggi atau situs web Traveloka di komputer).",
+  "term_condition": "Syarat & Ketentuan",
+  "there_is_surcharge": "Ada biaya tambahan sebesar THB 1000 untuk tur yang beroperasi selama periode Tahun Baru dan Songkran. Silakan bayar biaya tambahan langsung kepada operator tur.",
+  "all_travelers": "Semua wisatawan harus membawa identifikasi (atau paspor) dengan mereka setiap saat.",
+  "child_ticket": "Tiket anak berlaku untuk anak-anak usia 4 hingga 11 tahun atau tinggi kurang dari 120cm.",
+  "adult_ticket": "Tiket dewasa berlaku untuk orang dewasa berusia 12 hingga 60 tahun atau lebih dari 120cm.",
+  "infants_under": "Bayi di bawah 1 tahun, lansia di atas 60 tahun, dan hewan peliharaan tidak diizinkan dalam tur.",
+  "guest_with_high": "Tamunya dengan tekanan darah tinggi, penyakit jantung, kehamilan, asma, dan penyakit tulang atau ortopedi tidak diizinkan untuk berpartisipasi dalam tur ini.",
+  "you_are_allergic": "Jika Anda alergi terhadap makanan tertentu, harap beri tahu operator sebelum melakukan perjalanan.",
+  "this_activity": "Aktivitas ini tidak cocok untuk anak di bawah 2 tahun, wanita hamil, atau orang dengan kondisi medis atau cacat.",
+  "foreigners_must": "Warga asing harus mengajukan E-Visa melalui  dan mengirimkan visa yang disetujui ke agen 7 hari sebelum tanggal perjalanan.",
+  "you_plan_to": "Jika Anda berencana melakukan perjalanan selama festival besar, Anda harus memesan tiket setidaknya sebulan sebelumnya.",
+  "itineraries_time": "Itinerary dan waktu di atas adalah perkiraan dan dapat diubah tanpa pemberitahuan untuk menyesuaikan dengan pasang surut dan kondisi cuaca setempat."
 }
