--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -43,7 +43,7 @@
   "im_flexible": "ฉันยืดหยุ่นเกี่ยวกับวันที่",
   "hotel_residence": "ที่พักแบบโรงแรม",
   "seamless_living": "การดำเนินชีวิตที่ลื่นไหล ทำให้โรงแรมเป็นบ้านถาวรของคุณ!",
-  "saveloka_recommended": "หน่วยที่แนะนำโดย Saveloka",
+  "nowtravel_recommended": "หน่วยที่แนะนำโดย nowtravel",
   "stay_monthly": "อยู่รายเดือนเพื่อราคาที่ถูกกว่า 🤑",
   "disc_upto": "ส่วนลดสูงสุด",
   "see_all": "ดูทั้งหมด",
@@ -51,8 +51,8 @@
   "find_best": "ค้นหาหน่วยที่ดีที่สุดสำหรับการพักผ่อน 🌴",
   "thematic_instagram": "หน่วยที่มีหัวข้อและเหมาะสำหรับ Instagram!✨",
   "stay_with": "อยู่กับบรรยากาศใหม่!",
-  "saveloka_premium": "Saveloka พรีเมียม",
-  "selected_premium": "หน่วยพรีเมียมที่เลือกพร้อมบริการ 5 ดาวโดย Saveloka",
+  "nowtravel_premium": "NOW Travel พรีเมียม",
+  "selected_premium": "หน่วยพรีเมียมที่เลือกพร้อมบริการ 5 ดาวโดย nowtravel",
   "find_appartment": "ค้นหาอพาร์ทเมนท์ที่เข้ากับงบประมาณของคุณ! 💳",
   "price_below": "ราคาด้านล่างคือราคารายเดือน",
   "lowest": "ต่ำสุด",
@@ -66,7 +66,7 @@
   "best_selling": "ตึกอพาร์ทเมนท์ขายดีที่สุด 🏆",
   "recommend_apartments": "อพาร์ทเมนท์แนะนำ 🏬",
   "looking_for_a_place": "กำลังมองหาที่พัก? 🏠",
-  "find_by_saveloka": "ค้นหาหน่วย 'โดย Saveloka' ในเมืองใหญ่ของอินโดนีเซีย",
+  "find_by_nowtravel": "ค้นหาหน่วย 'โดย nowtravel' ในเมืองใหญ่ของอินโดนีเซีย",
   "new": "ใหม่",
   "discussion": "การอภิปราย",
   "introduction": "การแนะนำ",
@@ -218,7 +218,7 @@
   "contact_info": "ข้อมูลการติดต่อ",
   "real_estate_images": "รูปภาพบริษัทอสังหาริมทรัพย์",
   "update_image_to_maximum": "อัปเดตรูปภาพไปยังสูงสุดสองภาพ",
-  "do_you_agree": "คุณเห็นด้วยกับข้อกำหนดและนโยบายของ Saveloka หรือไม่?",
+  "do_you_agree": "คุณเห็นด้วยกับข้อกำหนดและนโยบายของ NOW Travel หรือไม่?",
   "add_room": "เพิ่มห้อง",
   "room_title": "หัวข้อห้อง",
   "enter_room_type": "กรอกชื่อประเภทห้อง",
@@ -257,7 +257,7 @@
   "main_currency": "สกุลเงินหลัก",
   "distance_to_city": "ระยะทางไปยังใจกลางเมือง",
   "number_of_floors": "จำนวนชั้น",
-  "property_facilities":"สิ่งอำนวยความสะดวกของทรัพย์สิน",
+  "property_facilities": "สิ่งอำนวยความสะดวกของทรัพย์สิน",
   "estate_contact": "ข้อมูลติดต่อของทรัพย์สิน",
   "rooms": "ห้อง",
   "estate_photo": "รูปภาพของทรัพย์สิน",
